--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
+  // change the name of the database to create a new one for migration purpose
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ContosoUniversity_Database;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ContosoUniversity_Database2;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
